# gameplay-deprecated

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.bat  build.sh  gulpfile.js  package.json  test.js  test.ts  tsconfig.json  v8.sh
docs/: _config.yml  index.html
docs/_api/: console.html  debugger.html  file-paths.html  graphics-object.html  keyboard.html  modules.html  mouse.html  shader-program.html  soundbuffer.html  soundsource.html  texture-font.html  texture2d.html  timer.html  vertex-buffer.html  vertex-data-state.html  window.html
docs/_data/: api.yml  lib.yml
docs/_includes/: footer.html  head.html  header.html  navigation.html  scripts.html
docs/_layouts/: default.html
docs/_lib/: basicshader.html  game.html  sprite.html  spritebatch.html
docs/api/: index.html
docs/css/: affix.css  bootstrap.min.css  main.css  prettify.css
docs/js/: affix.js  bootstrap.min.js  download-detect.js
docs/lib/: index.html
examples/: create-window.js  draw-mesh-with-basicshader.js  draw-sprite-with-spritebatch.js  draw-sprite.js  draw-text.js  draw-triangle-with-basicshader.js  geometry-with-lighting.js  input-keyboard.js  input-mouse.js  mesh.js  model.js  sprite.js  window.js
examples/breakout/: ball.js  box.js  breakout.js  components.js  game.js  level.js  objects.js  paddle.js
examples/platformer/: coin.js  content.js  game.js  ground.js  level.js  platform.js  player.js
examples/platformer/content/: level.json
lib/: bounds.js  camera.js  camera.ts  collision.js  collision.ts  color.js  color.ts  component.js  editable.js  entity.js  entity.ts  fps.js  game.js  game.ts  geometry.js  hotswap.js  hotswap.ts  import.js  keycode.js  keycode.ts  keys.js  lib.js  lib.ts  light.js  material.js  math.js  math.ts  matrix.js  mesh.js  model.js  model.ts  physics.js  physics.ts  runtime.d.ts  scene.js  shader.js  shader.ts  spatial.js  sprite.js  sprite.ts  (+5 more)
lib/assets/models/: box.json  sphere.json
lib/assets/shaders/basic/: fragment.glsl  vertex.glsl
lib/assets/shaders/sprite/: fragment.glsl  vertex.glsl
lib/assets/shaders/texture/: fragment.glsl  vertex.glsl
lib/assets/spritebatch/: fragment.glsl  geometry.glsl  vertex.glsl
lib/content/shaders/basic/: vertex.glsl
lib/content/shaders/sprite/: fragment.glsl  vertex.glsl
lib/gl-matrix/: common.js  vec3.js
samples/: sprite.js
samples/breakout/: game.js  game.ts
samples/platformer/: animation.js  animation.ts  coin.js  coin.ts  content.js  content.ts  context.js  context.ts  game.js  game.ts  level.js  level.ts  platform.js  platform.ts  player.js  player.ts
samples/platformer/content/: level.json
samples/triangle/: game.js  game.ts
samples/triangle/shader/: fragment.glsl  vertex.glsl
src/: main.cpp
src/audio/: audio-manager.cpp  audio-manager.h  audiomanager.cpp  audiomanager.h  sound-buffer.cpp  sound-buffer.h  sound-source.cpp  sound-source.h  soundbuffer.cpp  soundbuffer.h  soundeffect.cpp  soundeffect.h  soundsource.cpp  wave-format.cpp  wave-format.h  waveformat.cpp  waveformat.h
src/debug/: debug-server.cpp  debug-server.h
src/graphics/: GlyphCollection.cpp  GlyphCollection.h  GraphicsDevice.cpp  GraphicsDevice.h  TextureCollection.cpp  TextureCollection.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexDeclaration.cpp  VertexDeclaration.h  font-texture.cpp  font-texture.h  glyph-collection.cpp  glyph-collection.h  graphics-device.cpp  graphics-device.h  render-target.cpp  shader-program.cpp  shader-program.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  sprite-font.cpp  sprite-font.h  spritebatch.cpp  spritebatch.h  spritefont.cpp  spritefont.h  spriteshaders.cpp  spriteshaders.h  texture-collection.cpp  texture-collection.h  texture-font.cpp  texture-font.h  texture.cpp  texture.h  texture2d.cpp  (+13 more)
src/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/lib/: camera.ts
src/lib/gl-matrix/: mat4.js  vec2.js
src/runtime/audio/: audio-manager.cpp
src/runtime/graphics/: glyph-collection.cpp  graphics-device.cpp  render-target.h  shader-program.h  shader.cpp  texture2d.cpp  window.cpp
src/runtime/input/: keyboard.cpp
src/runtime/script/: script-global.cpp  script-global.h  script-object-wrap.h  scripthelper.h
src/runtime/utils/: file-reader.h  file-watcher.h
src/samples/: model.js
src/samples/assets/: suzanne.json
src/samples/platformer/: content.js  ground.js
src/script/: ObjectScript.h  script-debug.h  script-engine.cpp  script-engine.h  script-global.cpp  script-global.h  script-object-wrap.h  scriptargs.h  scriptengine.cpp  scriptengine.h  scriptglobal.h  scripthelper.h  scriptobject.cpp  scriptobject.h  scriptobjecthelper.h  scriptvalue.cpp  scriptvalue.h
src/system/: console.cpp  console.h  file.cpp  file.h
src/utils/: console.cpp  console.h  file-reader.cpp  file-reader.h  file-watcher.cpp  file-watcher.h  number-array.cpp  number-array.h  path-helper.h  timer.cpp  timer.h
test/: test-component.js  test-entity.js  test-spatial.js  test-sprite.js  tests.js
